# reqirements-orchestrator

./: .deploy.env.example  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  cloudbuild.yaml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.planning/: ISSUES.md  MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-database-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-llm-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md
.planning/phases/04-slack-router/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-07-PLAN.md  04-07-SUMMARY.md  04-08-PLAN.md  04-08-SUMMARY.md  04-09-PLAN.md  04-09-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-agent-core/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md
.planning/phases/06-skills/: 06-01-PLAN.md  (+6 more)
alembic/: env.py
alembic/versions/: 20251219_0001_initial_schema.py
config/: jira_fields.json  zep.yaml
deploy/: .env.production  .env.production.template  README.md  gcp-vm-create.sh  setup-vm.sh
docs/: SLACK_APP_SETUP.md  architecture.md  workflow.mmd
personas/architect/: knowledge.md
personas/product_manager/: knowledge.md
personas/security_analyst/: knowledge.md
scripts/: visualize_graph.py
src/: __init__.py  __main__.py  health.py  main.py
src/adapters/: __init__.py
src/admin/: __init__.py  routes.py
src/api/: main.py
src/config/: __init__.py  settings.py
src/context/: __init__.py  jira_linker.py  pin_extractor.py  retriever.py  root_indexer.py
src/core/: __init__.py
src/db/: __init__.py  approval_store.py  board_store.py  channel_context_store.py  checkpointer.py  connection.py  event_store.py  fact_store.py  jira_operations.py  listening_store.py  models.py  root_index_store.py  session_store.py
src/documents/: __init__.py  extractor.py  slack.py
src/graph/: __init__.py  checkpointer.py  event_validation.py  graph.py  intent.py  llm.py  nodes.py  routers.py  runner.py  state.py
src/jira/: __init__.py  client.py  mcp_client.py  types.py
src/knowledge/: __init__.py  models.py  store.py
src/llm/: __init__.py  capabilities.py  client.py  factory.py  types.py
src/memory/: __init__.py  entity_extractor.py  zep_client.py
src/personas/: __init__.py  commands.py  config.py  detector.py  loader.py  switcher.py  types.py
src/schemas/: __init__.py  draft.py  state.py  ticket.py
src/skills/: __init__.py  answer_matcher.py  ask_user.py  dispatcher.py  jira_create.py  jira_search.py  preview_ticket.py
src/slack/: __init__.py  app.py  approval.py  approval_store.py  binding.py  blocks.py  bot.py  channel_config_store.py  channel_tracker.py  contradiction.py  decision_linker.py  dedup.py  dedup_suggest.py  event_router.py  formatter.py  handlers.py  history.py  knowledge_store.py  modals.py  onboarding.py  pending_stories.py  pinned_board.py  progress.py  router.py  session.py  summarizer.py  sync_engine.py  thread_bindings.py
tests/: __init__.py  conftest.py  test_channel_join.py  test_event_router.py  test_event_validation.py  test_fact_store.py  test_intent_continuation.py  test_intent_router.py  test_routers.py  test_state.py  test_thread_context_extraction.py
tests/integration/: __init__.py  test_full_workflow.py
tests/unit/: __init__.py  test_events.py  test_graph.py  test_graph_service.py
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
web/src/: App.tsx  index.css  types.ts
(+266 files in other folders)
