[project]
name = "maro-v2"
version = "2.0.0"
description = "Multi-Agent Requirements Orchestrator - LangGraph Edition"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",

    # Memory (1.x for self-hosted Zep CE, 2.x is for Zep Cloud)
    "zep-python>=1.5.0,<2.0.0",

    # Slack
    "slack-bolt>=1.18.0",

    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "asyncpg>=0.29.0",
    "psycopg[binary,pool]>=3.1.0",

    # Configuration
    "pydantic-settings>=2.0.0",

    # Logging
    "structlog>=24.0.0",

    # Utilities
    "httpx>=0.24.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
