[project]
name = "jira-analyst-bot"
version = "0.1.0"
description = "Proactive Jira Analyst Bot - Slack bot that drives conversations to gather complete requirements and create Jira tickets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Boris"}
]

dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-google-genai",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "slack-bolt",
    "pydantic>=2.0",
    "pydantic-settings",
    "atlassian-python-api",
    "psycopg2-binary",
    "psycopg[binary]>=3.1",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
